--- a/css/about-us.css
+++ b/css/about-us.css
@@ -585,7 +585,7 @@ table {
     font-size: 12px;
   }
 }
-.modal-box .modal-form-login button {
+.modal-box button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -597,19 +597,19 @@ table {
   background-color: #fff;
 }
 @media only screen and (max-width: 480px) {
-  .modal-box .modal-form-login button {
+  .modal-box button {
     gap: 10px;
     padding: 15px 0;
   }
 }
-.modal-box .modal-form-login button span {
+.modal-box button span {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-size: 20px;
   color: #311f09;
 }
 @media only screen and (max-width: 480px) {
-  .modal-box .modal-form-login button span {
+  .modal-box button span {
     font-size: 12px;
   }
 }
