--- a/css/homepage.css
+++ b/css/homepage.css
@@ -842,7 +842,7 @@ table {
     font-size: 12px;
   }
 }
-.modal-box .modal-form-login button {
+.modal-box button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -854,19 +854,19 @@ table {
   background-color: #fff;
 }
 @media only screen and (max-width: 480px) {
-  .modal-box .modal-form-login button {
+  .modal-box button {
     gap: 10px;
     padding: 15px 0;
   }
 }
-.modal-box .modal-form-login button span {
+.modal-box button span {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-size: 20px;
   color: #311f09;
 }
 @media only screen and (max-width: 480px) {
-  .modal-box .modal-form-login button span {
+  .modal-box button span {
     font-size: 12px;
   }
 }
@@ -1063,6 +1063,428 @@ table {
 
 .invisible {
   visibility: hidden;
+}
+
+.modal-window {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  background-color: rgba(63, 167, 47, 0.7);
+  overflow-y: auto;
+}
+.modal-window .modal-box {
+  max-width: 80vw;
+  background-color: #fff;
+}
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.wrapper {
+  width: 1440px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.center {
+  width: 1112px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+@media only screen and (max-width: 1250px) {
+  .center {
+    width: calc(100% - 50px);
+  }
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+.logo .logo-letter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 51px;
+  height: 51px;
+  border-radius: 100%;
+  font-weight: 600;
+  font-size: 25px;
+  color: #fff;
+  background-color: #ff8a00;
+}
+.logo .logo-name {
+  font-weight: 600;
+  font-size: 14px;
+  color: #311f09;
+}
+.logo .logo-name .logo-name-orange {
+  color: #ff8a00;
+}
+
+.orange-green-btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 163px;
+  text-decoration: none;
+  font-weight: 600;
+  line-height: 200%;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  background-color: #ff8a00;
+}
+
+.orange-green-btns:hover {
+  background: #3fa72f;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+.modal-box {
+  width: 1440px;
+  max-width: 100%;
+  margin: 0 auto;
+  height: auto;
+  font-family: "Poppins", sans-serif;
+  background: url(../images/bkg-modal.png) 0/cover no-repeat;
+}
+@media only screen and (max-width: 1170px) {
+  .modal-box {
+    background: url(../images/bkg-modal.png) 100% 0%/75% no-repeat;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .modal-box {
+    background: url(../images/bkg-modal.png) 100% 0%/50% no-repeat;
+  }
+}
+.modal-box .logo {
+  padding-top: 39px;
+  padding-left: 39px;
+}
+.modal-box .logo a {
+  width: 33px;
+  height: 33px;
+  text-decoration: none;
+  font-size: 16px;
+}
+.modal-box .modal-form-login {
+  width: 491px;
+  padding-bottom: 146px;
+  margin-top: 134px;
+  margin-left: 146px;
+}
+@media only screen and (max-width: 1350px) {
+  .modal-box .modal-form-login {
+    padding-bottom: 73px;
+    margin-top: 67px;
+    margin-left: 39px;
+  }
+}
+@media only screen and (max-width: 1170px) {
+  .modal-box .modal-form-login {
+    width: 52%;
+    padding-bottom: 36px;
+    margin-top: 37px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .modal-box .modal-form-login {
+    width: calc(100% - 78px);
+  }
+}
+.modal-box .modal-form-login h2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 50px;
+  color: #311f09;
+}
+@media only screen and (max-width: 480px) {
+  .modal-box .modal-form-login h2 {
+    font-size: 20px;
+  }
+}
+.modal-box .modal-form-login p {
+  margin-top: 13px;
+  margin-bottom: 41px;
+  font-size: 20px;
+  line-height: 200%;
+  color: #5c4529;
+}
+@media only screen and (max-width: 480px) {
+  .modal-box .modal-form-login p {
+    margin-bottom: 13px;
+    font-size: 12px;
+  }
+}
+.modal-box .modal-form-login p a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #0094ff;
+}
+.modal-box .modal-form-login input:not([type=checkbox]) {
+  width: 100%;
+  min-width: 200px;
+  box-sizing: border-box;
+  padding: 15px 50px;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 40px;
+  font-size: 20px;
+  line-height: 200%;
+  color: #a0978c;
+  background-color: rgba(208, 204, 199, 0.1);
+}
+@media only screen and (max-width: 1170px) {
+  .modal-box .modal-form-login input:not([type=checkbox]) {
+    margin-bottom: 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .modal-box .modal-form-login input:not([type=checkbox]) {
+    padding: 15px;
+    font-size: 12px;
+  }
+}
+.modal-box .modal-form-login .align-modal-item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+@media only screen and (max-width: 1170px) {
+  .modal-box .modal-form-login .align-modal-item {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+}
+.modal-box .modal-form-login .align-modal-item .align-checkbox {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+@media only screen and (max-width: 480px) {
+  .modal-box .modal-form-login .align-modal-item .align-checkbox {
+    gap: 10px;
+  }
+}
+.modal-box .modal-form-login .align-modal-item .align-checkbox input[type=checkbox] {
+  width: 30px;
+  height: 30px;
+}
+@media only screen and (max-width: 480px) {
+  .modal-box .modal-form-login .align-modal-item .align-checkbox input[type=checkbox] {
+    width: auto;
+    height: auto;
+  }
+}
+.modal-box .modal-form-login .align-modal-item .align-checkbox label {
+  font-size: 20px;
+  line-height: 200%;
+  color: #5c4529;
+}
+@media only screen and (max-width: 480px) {
+  .modal-box .modal-form-login .align-modal-item .align-checkbox label {
+    font-size: 12px;
+  }
+}
+.modal-box .modal-form-login .align-modal-item a {
+  justify-self: end;
+  text-decoration: none;
+  font-size: 20px;
+  line-height: 200%;
+  color: #5c4529;
+}
+@media only screen and (max-width: 1170px) {
+  .modal-box .modal-form-login .align-modal-item a {
+    justify-self: start;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .modal-box .modal-form-login .align-modal-item a {
+    font-size: 12px;
+  }
+}
+.modal-box .modal-form-login input[type=submit] {
+  margin-top: 40px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  line-height: 200%;
+  color: #fff;
+  background-color: rgba(255, 138, 0, 0.8);
+}
+@media only screen and (max-width: 1170px) {
+  .modal-box .modal-form-login input[type=submit] {
+    margin-top: 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .modal-box .modal-form-login input[type=submit] {
+    font-size: 12px;
+  }
+}
+.modal-box button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  padding: 17px 0;
+  border: 1px solid #B6A38B;
+  border-radius: 10px;
+  background-color: #fff;
+}
+@media only screen and (max-width: 480px) {
+  .modal-box button {
+    gap: 10px;
+    padding: 15px 0;
+  }
+}
+.modal-box button span {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: #311f09;
+}
+@media only screen and (max-width: 480px) {
+  .modal-box button span {
+    font-size: 12px;
+  }
 }
 
 .wrapper {
